# hiveton-dou

./: .gitignore  AGENTS.md  PET_GAME_OPERATION_GUIDE.md
.playwright-mcp/: page-2026-04-13T14-48-25-629Z.yml  page-2026-04-13T14-50-12-065Z.yml  page-2026-04-13T15-01-43-962Z.yml  page-2026-04-13T15-02-07-395Z.yml  (+3 more)
app/src/ui/: CMakeLists.txt  filelist.txt  home_screen.c  home_screen.h  ui.c  ui.h  ui_components.c  ui_components.h  ui_dispatch.c  ui_dispatch.h  ui_epd_refresh_policy.c  ui_epd_refresh_policy.h  ui_events.h  ui_font_manager.c  ui_font_manager.h  ui_helpers.c  ui_helpers.h  ui_i18n.c  ui_i18n.h  ui_image_policy.h  ui_runtime_adapter.c  ui_runtime_adapter.h  ui_status_bar.c  ui_status_bar.h  ui_types.h
app/src/ui/screens/: ui_about_screen.c  ui_ai_dou_screen.c  ui_ai_weather_settings_screen.c  ui_bluetooth_config_screen.c  ui_brightness_screen.c  ui_calculator_screen.c  ui_calendar_screen.c  ui_datetime_screen.c  ui_file_manager_detail_screen.c  ui_file_manager_screen.c  ui_font_settings_screen.c  ui_home_screen.c  ui_language_screen.c  ui_more_screen.c  ui_music_list_screen.c  ui_music_player_screen.c  ui_network_mode_screen.c  ui_pet_rules_screen.c  ui_pet_screen.c  ui_pomodoro_screen.c  ui_reading_detail_screen.c  ui_reading_font_screen.c  ui_reading_list_screen.c  ui_reading_toc_screen.c  ui_record_list_screen.c  ui_recorder_screen.c  ui_settings_screen.c  ui_sleep_time_screen.c  ui_standby_screen.c  ui_status_detail_screen.c  ui_time_manage_screen.c  ui_wallpaper_screen.c  ui_weather_screen.c  ui_weather_toggle_screen.c
assets/: 长安的荔枝.epub
(+157 files in other folders)
